fixed dark mode slider, moved from site.css to navbar.css

--- a/MyBank/MyBankWebApp/wwwroot/css/Navbar.css
+++ b/MyBank/MyBankWebApp/wwwroot/css/Navbar.css
@@ -9,9 +9,9 @@
     border: 1px solid var(--main-color);
 }
 
-#custom-header.night-mode {
-    background: transparent;
-}
+    #custom-header.night-mode {
+        background: transparent;
+    }
 
     #custom-header .logo {
         width: 150px;
@@ -75,3 +75,51 @@
                 #custom-header .auth-btns ul li button:hover {
                     color: var(--secondary-color);
                 }
+
+/*NightModeSlider*/
+.slider-container {
+    margin-top: 3px;
+    width: 51px;
+    height: 22px;
+    position: relative;
+}
+
+
+.checkbox {
+    opacity: 0;
+    width: 0;
+    height: 0;
+    position: absolute;
+}
+
+.switch {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: #e9e9eb;
+    border-radius: 16px;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+}
+
+.slider {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    left: calc(45% - 27px/2 - 10px);
+    top: calc(60% - 27px/2);
+    border-radius: 50%;
+    background: #FFFFFF;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15), 0px 3px 1px rgba(0, 0, 0, 0.06);
+    transition: all 0.2s ease-out;
+    cursor: pointer;
+}
+
+.checkbox:checked + .switch {
+    background-color: #34C759;
+}
+
+    .checkbox:checked + .switch .slider {
+        left: calc(63% - 27px/2 + 10px);
+        top: calc(60% - 27px/2);
+    }
